syntax = "proto3";

option java_multiple_files = true;
option java_package = "link.relaynet.grpctest.cogrpc";

package relaynet.cogrpc;

service CargoRelay {
  rpc DeliverCargo (stream CargoDelivery) returns (stream CargoDeliveryAck);
  rpc CollectCargo (stream CargoDeliveryAck) returns (stream CargoDelivery);
}

message CargoDelivery {
  string id = 1;
  bytes cargo = 2;
}

message CargoDeliveryAck {
  string id = 1;
}
